--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- أضف داخل <body> أعلى النموذج -->
+<div style="background-color:#1a237e;color:white;padding:20px;border-radius:10px;margin-bottom:20px;text-align:center">
+  <h2>مرحبًا بك في منصة القبول التفاعلية – AdmiFlow</h2>
+  <p>يرجى تعبئة البيانات أدناه للتحقق من أهليتك للتقديم بجامعة الأمير محمد بن فهد</p>
+</div>
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
