--- a/admin.html
+++ b/admin.html
@@ -1,79 +1,71 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <title>لوحة تحكم القبول – AdmiFlow PMU</title>
+  <meta charset="UTF-8">
+  <title>لوحة التحكم الإدارية – AdmiFlow PMU</title>
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background: #f7f7f7; margin: 0; padding: 20px; direction: rtl; }
+    body { font-family: sans-serif; background-color: #f0f0f0; padding: 2rem; }
     h1 { color: #2c3e50; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { padding: 10px; border: 1px solid #ccc; text-align: center; }
-    th { background: #2980b9; color: white; }
-    tr:nth-child(even) { background: #f2f2f2; }
-    button { padding: 5px 10px; cursor: pointer; }
-    .filter { margin-bottom: 20px; }
+    button { padding: 0.5rem 1rem; margin: 0.5rem; }
+    textarea, input { width: 100%; padding: 0.5rem; margin-top: 0.5rem; }
+    .section { margin-bottom: 2rem; background: white; padding: 1rem; border-radius: 5px; }
   </style>
 </head>
 <body>
-  <h1>📋 لوحة تحكم القبول – AdmiFlow PMU</h1>
+  <h1>📋 لوحة التحكم – طلبات القبول</h1>
 
-  <div class="filter">
-    <label>تصفية حسب الحالة:</label>
-    <select id="statusFilter" onchange="filterStatus()">
-      <option value="">الكل</option>
-      <option value="قيد المراجعة">قيد المراجعة</option>
-      <option value="مقبول">مقبول</option>
-      <option value="مرفوض">مرفوض</option>
-    </select>
+  <div class="section">
+    <h2>🔍 عرض جميع الطلبات</h2>
+    <button onclick="fetchApplications()">تحميل الطلبات</button>
+    <pre id="applications"></pre>
   </div>
 
-  <table>
-    <thead>
-      <tr>
-        <th>رقم الطلب</th>
-        <th>الاسم</th>
-        <th>الحالة</th>
-        <th>البريد</th>
-        <th>تاريخ التقديم</th>
-      </tr>
-    </thead>
-    <tbody id="applicationsTable">
-      <!-- سيتم تعبئة الطلبات هنا -->
-    </tbody>
-  </table>
+  <div class="section">
+    <h2>✅ تحديث حالة طلب</h2>
+    <input type="text" id="appId" placeholder="رقم الطلب">
+    <input type="text" id="newStatus" placeholder="الحالة الجديدة (مثلاً: مقبول)">
+    <button onclick="updateStatus()">تحديث الحالة</button>
+    <pre id="statusResponse"></pre>
+  </div>
+
+  <div class="section">
+    <h2>🗑 حذف طلب</h2>
+    <input type="text" id="deleteId" placeholder="رقم الطلب للحذف">
+    <button onclick="deleteApplication()">حذف الطلب</button>
+    <pre id="deleteResponse"></pre>
+  </div>
 
   <script>
     async function fetchApplications() {
       const res = await fetch('/admin/applications');
       const data = await res.json();
-      window.allApps = data;
-      displayApplications(data);
+      document.getElementById('applications').textContent = JSON.stringify(data, null, 2);
     }
 
-    function displayApplications(apps) {
-      const tbody = document.getElementById('applicationsTable');
-      tbody.innerHTML = '';
-      apps.forEach(app => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${app.id}</td>
-          <td>${app.name}</td>
-          <td>${app.status}</td>
-          <td>${app.email}</td>
-          <td>${new Date(app.submittedAt).toLocaleDateString()}</td>
-        `;
-        tbody.appendChild(row);
+    async function updateStatus() {
+      const res = await fetch('/admin/update-status', {
+        method: 'PUT',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          applicationId: document.getElementById('appId').value,
+          newStatus: document.getElementById('newStatus').value
+        })
       });
+      const data = await res.json();
+      document.getElementById('statusResponse').textContent = JSON.stringify(data, null, 2);
     }
 
-    function filterStatus() {
-      const status = document.getElementById('statusFilter').value;
-      const filtered = status ? window.allApps.filter(a => a.status === status) : window.allApps;
-      displayApplications(filtered);
+    async function deleteApplication() {
+      const res = await fetch('/admin/delete-application', {
+        method: 'DELETE',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          applicationId: document.getElementById('deleteId').value
+        })
+      });
+      const data = await res.json();
+      document.getElementById('deleteResponse').textContent = JSON.stringify(data, null, 2);
     }
-
-    fetchApplications();
   </script>
 </body>
 </html>
